# C_programming

./: CMakeLists.txt  matrix.txt  numbers.txt  register.txt  squares.txt
Ex1/: main.c
Ex10/: main.c
Ex11/: main.c
Ex12/: main.c
Ex13/: main.c
Ex14/: main.c
Ex15/: main.c
Ex16/: main.c
Ex17/: main.c
Ex18/: main.c
Ex19/: main.c  menu_items.txt
Ex2/: main.c
Ex20/: debug.c  debug.h  main.c
Ex21/: main.c  nmea_data.txt
Ex3/: main.c
Ex4/: main.c
Ex5/: main.c
Ex6/: main.c
Ex7/: main.c
Ex8/: main.c
Ex9/: main.c
FP1/: main.c
FP2/: main.c
FP3/: main.c
FP4/: main.c
LLaBM1/: main.c
LLaBM2/: main.c
LLaBM3/: main.c
LLaBM4/: main.c
Project/: main.c  main.h  seat_reservations.csv
Project/Utils/: file_handling.c  file_handling.h  file_utils.c  file_utils.h  tools.c  tools.h
SaF1/: main.c
SaF2/: characters.txt  main.c
SaF3/: main.c
SaF4/: main.c
Test/: main.c
Test2/: main.c
Test3/: main.c
VAaCP1/: main.c
VAaCP2/: main.c
VAaCP3/: main.c
VAaCP4/: main.c
