cmake_minimum_required(VERSION 4.0)

project(C_programming C)

set(CMAKE_C_STANDARD 11)

add_executable(ex1 Ex1/main.c)
add_executable(ex2 Ex2/main.c)
add_executable(ex3 Ex3/main.c)
add_executable(ex4 Ex4/main.c)
add_executable(ex5 Ex5/main.c)
add_executable(ex6 Ex6/main.c)
add_executable(ex7 Ex7/main.c)
add_executable(ex8 Ex8/main.c)
add_executable(ex9 Ex9/main.c)
add_executable(ex10 Ex10/main.c)
add_executable(ex11 Ex11/main.c)
add_executable(ex12 Ex12/main.c)
add_executable(ex13 Ex13/main.c)
add_executable(ex14 Ex14/main.c)
add_executable(ex15 Ex15/main.c)
add_executable(ex16 Ex16/main.c)
add_executable(test Test/main.c)
add_executable(ex17 Ex17/main.c)
add_executable(ex18 Ex18/main.c)
add_executable(ex19 Ex19/main.c)
add_executable(ex20 Ex20/main.c Ex20/debug.c)
add_executable(debug.c Ex20/debug.c)
add_executable(ex21 Ex21/main.c)